force-app/main/default/objects/Event_Expense__c/Event_Expense__c.object-meta.xml
<CustomObject>
    <label>Event Expense</label>
    <nameField>
        <displayFormat>EE-{0000}</displayFormat>
        <label>Event  Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>