force-app/main/default/objects/Event_Expense__c/fields/Associated_Event__c.field-meta.xml
<CustomField>
    <fullName>Associated_Event__c</fullName>
    <description>The event to which the expense is associated.</description>
    <label>Associated Event</label>
    <referenceTo>Event_Plan__c</referenceTo>
    <relationshipLabel>Event Expenses</relationshipLabel>
    <relationshipName>Event_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>