force-app/main/default/objects/Event_Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The category or type of expense</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venue Rental</fullName>
            </value>
            <value>
                <fullName>Catering and Food</fullName>
            </value>
            <value>
                <fullName>Entertainment and Performers</fullName>
            </value>
            <value>
                <fullName>Decorations and Ambiance</fullName>
            </value>
            <value>
                <fullName>Marketing and Promotion</fullName>
            </value>
            <value>
                <fullName>Staff and Personnel</fullName>
            </value>
            <value>
                <fullName>Audiovisual Equipment</fullName>
            </value>
            <value>
                <fullName>Transportation and Logistics</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Supplies</fullName>
            </value>
            <value>
                <fullName>Security and Insurance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>